--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,6 +1,9 @@
-body {
-  background-color: #1c2022;
+#root {
+  height: 100%;
+  width: 100%;
   height: 2000px;
+  background-color: #1c2022;
+  color: white;
   padding: 50px;
 }
 
